use Path.Builder, Wave and methods